--- a/CPMPluginTemplate.csproj
+++ b/CPMPluginTemplate.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>7b36dbc7-6ea8-4b10-b9f8-f93beea355f2</ProjectGuid>
+    <ProjectGuid>{7B36DBC7-6EA8-4B10-B9F8-F93BEEA355F2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CPMPluginTemplate</RootNamespace>
@@ -31,24 +31,37 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="CyberArk.Extensions.Plugins.Models">
+      <HintPath>lib\CyberArk.Extensions.Plugins.Models.dll</HintPath>
+    </Reference>
+    <Reference Include="CyberArk.Extensions.Utilties">
+      <HintPath>lib\CyberArk.Extensions.Utilties.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="plugin\Class1.cs" />
+    <Compile Include="plugin\BaseAction.cs" />
+    <Compile Include="plugin\Change.cs" />
+    <Compile Include="plugin\Logon.cs" />
+    <Compile Include="plugin\PluginErrors.cs" />
+    <Compile Include="plugin\Prereconcile.cs" />
+    <Compile Include="plugin\Reconcile.cs" />
+    <Compile Include="plugin\Verify.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
