--- a/CPMPluginTemplate.csproj
+++ b/CPMPluginTemplate.csproj
@@ -58,6 +58,7 @@
     <Compile Include="plugin\Reconcile.cs" />
     <Compile Include="plugin\Verify.cs" />
 	<Compile Include="api\ServiceNowUserModel.cs" />
+	<Compile Include="api\ServiceNowResponseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
